Removed _game member from GameState classes